Add output uuid to api
